<resources>
<!--General Strings-->
    <string name="app_name">SIT305 Quiz App</string>
    <string name="main_header">SIT305 Quiz App</string>
    <string name="enter_name">Enter your name:</string>
    <string name="start_button">START</string>
    <string name="welcome">Welcome!</string>
    <string name="progress_level">1/5</string>

    <string name="congratulations">Congratulations!</string>
    <string name="your_score">Your score:</string>
    <string name="score">Final score here</string>
    <string name="new_quiz_btn">Take new Quiz</string>
    <string name="finish">Finish</string>

    <string name="submit_button">Submit</string>
    <string name="next_button">Next</string>

<!--Question Strings-->
<!--Questions will be stored in string arrays in the following format:-->
<!--[Question Title, Question Description, Answer 1, Answer 2, Answer 3, Correct Answer]-->
    <string name="q1_title">Question Title</string>
    <string name="q1_desc">Question description goes here.</string>
    <string name="q1_answer1">Answer 1</string>
    <string name="q1_answer2">Answer 2</string>
    <string name="q1_answer3">Answer 3</string>

    <string-array name="question1">
        <item>Question Title</item>
        <item>Question description goes here.</item>
        <item>Answer 1</item>
        <item>Answer 2</item>
        <item>Answer 3</item>
        <item>Answer 1</item>
    </string-array>

    <string-array name="question2">
        <item>Question Title</item>
        <item>Question description goes here.</item>
        <item>Answer 1</item>
        <item>Answer 2</item>
        <item>Answer 3</item>
        <item>Answer 1</item>
    </string-array>

    <string-array name="question3">
        <item>Question Title</item>
        <item>Question description goes here.</item>
        <item>Answer 1</item>
        <item>Answer 2</item>
        <item>Answer 3</item>
        <item>Answer 1</item>
    </string-array>

    <string-array name="question4">
        <item>Question Title</item>
        <item>Question description goes here.</item>
        <item>Answer 1</item>
        <item>Answer 2</item>
        <item>Answer 3</item>
        <item>Answer 1</item>
    </string-array>

    <string-array name="question5">
        <item>Question Title</item>
        <item>Question description goes here.</item>
        <item>Answer 1</item>
        <item>Answer 2</item>
        <item>Answer 3</item>
        <item>Answer 1</item>
    </string-array>
</resources>