<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ProgressLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/WelcomeText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="18sp"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/PorgressText"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/progress_level"
            android:textColor="#000000" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:indeterminateOnly="false"
            android:max="5"
            android:progress="3"
            android:progressDrawable="@drawable/progress_bar_states" />
    </LinearLayout>

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q1_title"
        android:textColor="#000000"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="5dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/questionDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q1_desc"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="5dp"
        android:textColor="#4E4E4E" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/ans1"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/ans_btn"
            android:onClick="onClick"
            android:text="@string/q1_answer1" />

        <Button
            android:id="@+id/ans2"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/ans_btn"
            android:onClick="onClick"
            android:text="@string/q1_answer2" />

        <Button
            android:id="@+id/ans3"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/ans_btn"
            android:onClick="onClick"
            android:text="@string/q1_answer3" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/submit_btn"
            android:text="@string/submit_button" />

    </LinearLayout>

</LinearLayout>