<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/MainHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/main_header"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/EnterName"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/enter_name"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/textView4"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

        <Button
            android:id="@+id/button"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_button"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>